--- a/xGame/Java/xgame/src/main/resources/application.properties
+++ b/xGame/Java/xgame/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/xgame
 spring.datasource.username=root
-spring.datasource.password=trinkilo
+spring.datasource.password=teamwethemboys
+server.error.include-message=always
