--- a/xGame/Java/xgame/pom.xml
+++ b/xGame/Java/xgame/pom.xml
@@ -44,6 +44,11 @@
 			</exclusion>
 		</exclusions>
 	</dependency>
+	<dependency>
+    	<groupId>com.google.guava</groupId>
+    	<artifactId>guava</artifactId>
+    	<version>20.0</version>
+	</dependency>
 </dependencies>
 
 
